add footnote on RCT's; add color to globe

--- a/be-less-wrong/be-less-wrong.html
+++ b/be-less-wrong/be-less-wrong.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-05-26">
+<meta name="dcterms.date" content="2025-06-07">
 
 <title>Be Less Wrong</title>
 <style>
@@ -118,9 +118,9 @@ window.Quarto = {
       <style>
         :root {
           --cr-section-background-color: white;
---cr-narrative-background-color-overlay: grey;
---cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-overlay: grey;
         }
       </style>
     
@@ -145,7 +145,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">May 26, 2025</p>
+      <p class="date">June 7, 2025</p>
     </div>
   </div>
   
@@ -236,7 +236,7 @@ window.Quarto = {
 </div>
 <div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-belesswrong">
 <div class="narrative">
-<p>My point? Simple models feel intuitive and have a commonsense appeal. Yet, with even slightly complicated social issues, simple models may be wrong. <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a><span class="math inline">\(^,\)</span> <a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a></p>
+<p>My point? Simple models feel intuitive and have a commonsense appeal. Yet, with even slightly complicated social issues, simple models may be wrong. <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a><span class="math inline">\(^,\)</span> <a href="#fn3" class="footnote-ref" id="fnref3" role="doc-noteref"><sup>3</sup></a><span class="math inline">\(^,\)</span> <a href="#fn4" class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a></p>
 <p>What I have illustrated here is only one set of ideas about how we need to complicate our quantitative thinking to try to be a <em>little less wrong</em> in thinking about social problems.</p>
 <p>Other more advanced statistical techniques may be seen as attempts to deal with other complications of the data, in an effort to be <em>less wrong</em>.</p>
 </div>
@@ -255,7 +255,7 @@ window.Quarto = {
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-globe-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="plotly html-widget html-fill-item" id="htmlwidget-70a688681697cdb7b619" style="width:100%;height:288px;"></div>
-<script type="application/json" data-for="htmlwidget-70a688681697cdb7b619">{"x":{"visdat":{"1cd52cb3dbf5":["function () ","plotlyVisDat"]},"cur_data":"1cd52cb3dbf5","attrs":{"1cd52cb3dbf5":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20]}},"layout":{"margin":{"b":0,"l":0,"t":0,"r":0,"pad":3},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showland":true,"landcolor":"rgba(169,169,169,1)","showcountries":true,"showocean":false,"oceancolor":"lightblue","lataxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"lonaxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"projection":{"type":"orthographic","rotation":{"lon":-45,"lat":10,"roll":0}}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"type":"scattergeo","mode":"markers","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"line":{"color":"rgba(31,119,180,1)"},"geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-70a688681697cdb7b619">{"x":{"visdat":{"a80669621d7":["function () ","plotlyVisDat"]},"cur_data":"a80669621d7","attrs":{"a80669621d7":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20]}},"layout":{"margin":{"b":0,"l":0,"t":0,"r":0,"pad":3},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showland":true,"landcolor":"rgba(34,139,34,1)","showcountries":true,"showocean":true,"oceancolor":"royalblue","lataxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"lonaxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"projection":{"type":"orthographic","rotation":{"lon":-45,"lat":10,"roll":0}}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"type":"scattergeo","mode":"markers","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"line":{"color":"rgba(31,119,180,1)"},"geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-globe-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries of the World
@@ -438,6 +438,7 @@ Westreich, Daniel, and Sander Greenland. 2013. <span>“The Table 2 Fallacy: Pre
 <li id="fn1"><p>An analogous process can occur with <em>multilevel</em> data, in which there are often many groups, such as many schools, many neighborhoods, or many countries. Failure to account for the grouping of the data–in schools, neighborhoods or countries–can sometimes lead to dramatically incorrect results <span class="citation" data-cites="Gelman2007 Nieuwenhuis2015 langbliese">(<a href="#ref-Gelman2007" role="doc-biblioref">Gelman et al. 2007</a>; <a href="#ref-Nieuwenhuis2015" role="doc-biblioref">Nieuwenhuis 2015</a>; <a href="#ref-langbliese" role="doc-biblioref">Lang and Bliese in press</a>)</span>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn2"><p>Since developing this tutorial, I’ve been reminded in some conversations about additional issues. For example, in this tutorial, I’m arguing for including as many control variables as possible. However, for some social issues, only <em>small samples</em> are available. Such small samples may be <em>statistically underpowered</em>, and may not have sufficient sample size to include many different control variables.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn3"><p>Additionally, since developing this tutorial, I’ve also been reminded that one must be <em>careful</em> and <em>thoughtful</em> about choosing <em>control variables</em>. As a simple example, consider a hypothetical situation in which <span class="math inline">\(x\)</span> is a cause of <span class="math inline">\(y\)</span>: <span class="math inline">\(x \rightarrow y\)</span>. If <span class="math inline">\(m\)</span> is a mediator of the relationship between <span class="math inline">\(x\)</span> and <span class="math inline">\(y\)</span>, then including <span class="math inline">\(m\)</span> in one’s statistical model changes the meaning of the estimate of <span class="math inline">\(x\)</span>. <span class="math inline">\(\beta_x\)</span> is now an estimate of the <em>direct</em> effect of <span class="math inline">\(x\)</span> on <span class="math inline">\(y\)</span>, accounting for the presence of <span class="math inline">\(m\)</span>. There may be an <em>indirect</em> effect of <span class="math inline">\(x\)</span> on <span class="math inline">\(y\)</span> through <span class="math inline">\(m\)</span> (<span class="math inline">\(x \rightarrow m \rightarrow\)</span> y) that needs to be accounted for using special procedures <span class="citation" data-cites="Westreich2013">(CF <a href="#ref-Westreich2013" role="doc-biblioref">Westreich and Greenland 2013</a>)</span>. Including a control variable <span class="math inline">\(c\)</span> that is a function of both <span class="math inline">\(x\)</span> and <span class="math inline">\(y\)</span> (<span class="math inline">\(x \rightarrow c \ \&amp; \ y \rightarrow\)</span> c) may introduce additional complications <span class="citation" data-cites="Elwert2014">(<a href="#ref-Elwert2014" role="doc-biblioref">Elwert and Winship 2014</a>)</span>.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn4"><p>Further, one could argue, somewhat convincingly, that an RCT (<em>randomized controlled trial</em>) would solve the major issue inspiring this presentation. By <em>randomly</em> assigning study participants to a <em>treatment</em> and <em>control</em> group, we would avoid the possibility that our results could be statistically confounded by other factors, and thus avoid the possibility that our results would flip or substantially change as we add more variables to the model. However, what is not often enough acknowledged is that RCT’s are often based upon small <em>clinically available</em> or <em>conveniently available</em> samples that may not <em>generalize</em> well to other populations or people. Large observational studies with diverse populations–and models with many appropriate control variables–certainly have their role.<a href="#fnref4" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section></div></main>
 <!-- /main column -->
