--- a/parenting.html
+++ b/parenting.html
@@ -41,6 +41,15 @@ ul.task-list li input[type="checkbox"] {
 <script src="parenting_files/libs/quarto-diagram/mermaid.min.js"></script>
 <script src="parenting_files/libs/quarto-diagram/mermaid-init.js"></script>
 <link href="parenting_files/libs/quarto-diagram/mermaid.css" rel="stylesheet">
+<link href="parenting_files/libs/htmltools-fill-0.5.8.1/fill.css" rel="stylesheet">
+<script src="parenting_files/libs/htmlwidgets-1.6.4/htmlwidgets.js"></script>
+<script src="parenting_files/libs/plotly-binding-4.10.4/plotly.js"></script>
+<script src="parenting_files/libs/typedarray-0.1/typedarray.min.js"></script>
+<script src="parenting_files/libs/jquery-3.5.1/jquery.min.js"></script>
+<link href="parenting_files/libs/crosstalk-1.2.1/css/crosstalk.min.css" rel="stylesheet">
+<script src="parenting_files/libs/crosstalk-1.2.1/js/crosstalk.min.js"></script>
+<link href="parenting_files/libs/plotly-htmlwidgets-css-2.11.1/plotly-htmlwidgets.css" rel="stylesheet">
+<script src="parenting_files/libs/plotly-main-2.11.1/plotly-latest.min.js"></script>
 <meta cr-debug-mode="false">
 <meta cr-remove-header-space="false">
 
@@ -58,9 +67,9 @@ ul.task-list li input[type="checkbox"] {
       <style>
         :root {
           --cr-narrative-background-color-overlay: grey;
---cr-narrative-background-color-sidebar: white;
 --cr-narrative-text-color-sidebar: black;
 --cr-section-background-color: white;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -87,12 +96,12 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-scale-by=".75" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by=".75">
 <div class="narrative">
 <p>Parents raise their children in a variety of ways.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.1" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-pan-to="0%,0%" data-focus-on="cr-positiveparenting" data-scale-by="1.1">
 <div class="narrative">
 <p>The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs).</p>
 </div>
@@ -102,12 +111,12 @@ ul.task-list li input[type="checkbox"] {
 <p>Data came from the fourth (2009-2013) and fifth (2012-2017) rounds of the UNICEF Multiple Indicator Cluster Surveys (MICS).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.25" data-focus-on="cr-mymap">
+<div class="trigger new-trigger" data-focus-on="cr-mymap" data-scale-by="1.25">
 <div class="narrative">
 <p>Analyses were restricted to households with children under 5 years, leaving a sample of 229,465 respondents across 60 LMICs.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-equation">
+<div class="trigger new-trigger" data-focus-on="cr-equation" data-scale-by="1">
 <div class="narrative">
 <p>Data were analyzed using a statistical method known as Bayesian multilevel logistic regression.</p>
 </div>
@@ -152,22 +161,22 @@ ul.task-list li input[type="checkbox"] {
 <p>However, the associations of discipline with child outcomes were still largely consistent across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by=".6" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".6">
 <div class="narrative">
 <p>Psychological and physical aggression were disadvantageous for children’s socio-emotional development across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by=".7" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".7">
 <div class="narrative">
 <p>Only verbal reasoning was associated with positive child socio-emotional development.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by=".8" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".8">
 <div class="narrative">
 <p>No form of psychological aggression or physical aggression benefited child socio-emotional development in any country.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by=".9" data-focus-on="cr-positiveparenting">
+<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".9">
 <div class="narrative">
 <p>Greater emphasis should be dedicated to reducing parental use of psychological and physical aggression across cultural contexts.</p>
 </div>
@@ -184,11 +193,18 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 <div id="cr-mymap" class="scale-to-fill sticky">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="mymap.png" class="img-fluid figure-img"></p>
-<figcaption>Countries in MICS</figcaption>
+<div class="cell">
+<div id="fig-2" class="cell-output-display quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="plotly html-widget html-fill-item" id="htmlwidget-d211b2a7d3f9ee75950e" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-d211b2a7d3f9ee75950e">{"x":{"visdat":{"146455e0849d":["function () ","plotlyVisDat"]},"cur_data":"146455e0849d","attrs":{"146455e0849d":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;1: Countries in UNICEF MICS Data
+</figcaption>
 </figure>
+</div>
 </div>
 </div>
 <div id="cr-discipline-most-common" class="scale-to-fill sticky">
