--- a/README.html
+++ b/README.html
@@ -354,7 +354,7 @@ display: none;
 
 <div id="closeread" class="section level1">
 <h1>closeread</h1>
-<p>closeread projects</p>
+<p><code>closeread</code> <em>scrollytelling</em> projects using <a href="https://closeread.dev/">https://closeread.dev/</a></p>
 <ul>
 <li><a href="https://globalfamilies.quarto.pub/parenting/">https://globalfamilies.quarto.pub/parenting/</a></li>
 <li><a href="https://globalfamilies.quarto.pub/be-less-wrong/">https://globalfamilies.quarto.pub/be-less-wrong/</a></li>
