FOURTH (AND FINAL???) COMMIT

--- a/logarithms/logarithms.html
+++ b/logarithms/logarithms.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Andy Grogan-Kaylor">
 <meta name="dcterms.date" content="2025-10-23">
 
-<title>logarithms</title>
+<title>Logarithms</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -104,17 +104,18 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: white;
---cr-section-background-color: white;
+          --cr-section-background-color: white;
 --cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">logarithms</h1>
+<h1 class="title">Logarithms</h1>
+<p class="subtitle lead">Scroll down to move through this presentation.</p>
 </div>
 
 
@@ -145,38 +146,34 @@ window.Quarto = {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<section id="the-exponential-function" class="level2 narrative trigger">
-<h2 class="narrative anchored" data-anchor-id="the-exponential-function">The Exponential Function</h2>
-</section>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-exponential">
-<div class="narrative">
+<div class="trigger new-trigger" data-focus-on="cr-exponential" data-scale-by="5.0">
+<section id="the-exponential-function" class="level2 narrative">
+<h2 class="anchored" data-anchor-id="the-exponential-function">The Exponential Function</h2>
 <p>We start with the <em>exponential function</em>.</p>
+</section>
 </div>
-</div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-exponential-definition">
+<div class="trigger new-trigger" data-focus-on="cr-exponential-definition" data-scale-by="5.0">
 <div class="narrative">
 <p>The <em>exponent</em> tells us how many times to multiply the base by itself to get the result.</p>
 </div>
 </div>
-<section id="the-logarithm" class="level2 narrative trigger">
-<h2 class="narrative anchored" data-anchor-id="the-logarithm">The Logarithm</h2>
-</section>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-logarithm-if">
-<div class="narrative">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-if" data-scale-by="5.0">
+<section id="the-logarithm" class="level2 narrative">
+<h2 class="anchored" data-anchor-id="the-logarithm">The Logarithm</h2>
 <p>We then consider the <em>logarithm</em>.</p>
+</section>
 </div>
-</div>
-<div class="trigger new-trigger" data-focus-on="cr-logarithm-then">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-then" data-scale-by="5.0">
 <div class="narrative">
 
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-logarithm-words">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-words" data-scale-by="3.0">
 <div class="narrative">
 <p>In words:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-logarithm-example">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-example" data-scale-by="5.0">
 <div class="narrative">
 <p>For example:</p>
 </div>
@@ -186,53 +183,39 @@ window.Quarto = {
 <p>The logarithm answers the question: <em>What is the power to which we have to raise the number to get the result?</em></p>
 </div>
 </div>
-<section id="the-natural-logarithm" class="level2 narrative trigger">
-<h2 class="narrative anchored" data-anchor-id="the-natural-logarithm">The Natural Logarithm</h2>
+<div class="trigger new-trigger" data-focus-on="cr-e-definition">
+<section id="the-natural-logarithm" class="level2 narrative">
+<h2 class="anchored" data-anchor-id="the-natural-logarithm">The Natural Logarithm</h2>
+<p>For deep mathematical reasons, it is often useful to use logarithms with base <span class="math inline">\(e\)</span><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> which is often termed the <em>natural logarithm</em>, written <span class="math inline">\(\ln\)</span></p>
 </section>
-<div class="trigger">
-<div class="narrative">
-<p>For deep mathematical reasons, it is often useful to use logarithms with base <span class="math inline">\(e\)</span> which is often termed the <em>natural logarithm</em>, written <span class="math inline">\(\ln\)</span></p>
-</div>
 </div>
 <div class="trigger">
 <div class="narrative">
-<p><span class="math inline">\(e\)</span> is a kind of fundamental mathematical constant, like <span class="math inline">\(\pi\)</span>, but without the easy geometric definition that <span class="math inline">\(\pi\)</span> has. (For any <span class="math inline">\(\bigcirc\)</span>, <span class="math inline">\(\pi = \frac{\text{circumference}}{\text{diameter}}\)</span>.)</p>
+<p><span class="math inline">\(e\)</span> emerges in many contexts, including some aspects of compound growth processes<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>. <span class="math inline">\(e\)</span> is approximately equal to 2.71828….</p>
 </div>
 </div>
-<div class="trigger">
+<div class="trigger new-trigger" data-focus-on="cr-ln-definition-if" data-scale-by="5.0">
 <div class="narrative">
-<p><span class="math inline">\(e\)</span> emerges in many contexts, including some aspects of compound growth processes <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>. <span class="math inline">\(e\)</span> is approximately equal to 2.71828….</p>
+
 </div>
 </div>
-<div class="trigger">
+<div class="trigger new-trigger" data-focus-on="cr-ln-definition-then" data-scale-by="5.0">
 <div class="narrative">
-<p>If <span class="math display">\[y = e^x\]</span> then <span class="math display">\[\ln(y) = x\]</span></p>
+
 </div>
 </div>
-<section id="logistic-regression" class="level2 narrative trigger">
-<h2 class="narrative anchored" data-anchor-id="logistic-regression">Logistic Regression</h2>
-</section>
-<div class="trigger">
-<div class="narrative">
+<div class="trigger new-trigger" data-focus-on="cr-odds" data-scale-by="5.0">
+<section id="logistic-regression" class="level2 narrative">
+<h2 class="anchored" data-anchor-id="logistic-regression">Logistic Regression</h2>
 <p>One application of the logarithm is in thinking about <em>logistic regression</em>. In logistic regression, we start by thinking about the <em>odds</em> of our outcome:</p>
+</section>
 </div>
-</div>
-<div class="trigger">
+<div class="trigger new-trigger" data-focus-on="cr-log-odds" data-scale-by="3.0">
 <div class="narrative">
-<p><span class="math display">\[\frac{p(\text{outcome})}{1-p(\text{outcome})}\]</span></p>
+<p>For mathematical reasons–illustrated below–we end up working with the <em>logarithm</em> of the odds, or the <em>log odds</em>:</p>
 </div>
 </div>
-<div class="trigger">
-<div class="narrative">
-<p>For mathematical reasons–detailed below–we end up working with the <em>logarithm</em> of the odds, or the <em>log odds</em>:</p>
-</div>
-</div>
-<div class="trigger">
-<div class="narrative">
-<p><span class="math display">\[\ln(\frac{p(\text{outcome})}{1-p(\text{outcome})}) = x\]</span></p>
-</div>
-</div>
-<div class="trigger new-trigger" data-focus-on="cr-solve-for-y">
+<div class="trigger new-trigger" data-focus-on="cr-solve-for-y" data-scale-by="3.0">
 <div class="narrative">
 <p>To <em>graph</em> or <em>visualize</em> these <em>log odds</em>, we need to solve for <span class="math inline">\(p(\text{outcome})\)</span>, the probability of the outcome:</p>
 </div>
@@ -243,13 +226,11 @@ window.Quarto = {
 <p>This is the first step in mapping a set of <em>continuous</em> predictors to the probability of <em>categorical</em> outcome.</p>
 </div>
 </div>
-<section id="logarithmic-spiral" class="level2 narrative trigger">
-<h2 class="narrative anchored" data-anchor-id="logarithmic-spiral">Logarithmic Spiral</h2>
-</section>
 <div class="trigger new-trigger" data-focus-on="cr-logarithmic-spiral">
-<div class="narrative">
+<section id="logarithmic-spiral" class="level2 narrative">
+<h2 class="anchored" data-anchor-id="logarithmic-spiral">Logarithmic Spiral</h2>
 <p>An interesting sidenote is that the logarithm forms the basis of the logarithmic spiral. The equation for a logarithmic spiral in polar coordinates is: <span class="math inline">\(r = ae^{b \theta}\)</span>, where <span class="math inline">\(\theta\)</span> is the angle, <span class="math inline">\(r\)</span> is the radius, and <span class="math inline">\(a\)</span> and <span class="math inline">\(b\)</span> are constants.</p>
-</div>
+</section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-logarithmic-spiral-2">
 <div class="narrative">
@@ -269,20 +250,20 @@ window.Quarto = {
 </div>
 <div id="cr-logarithm-if" class="sticky">
 <p>If…</p>
-<p><span class="math display">\[y = b^x\]</span></p>
+<p><span class="math display">\[\color{purple}{y} \color{black}{=} \color{blue}{b}^{\color{red}{x}}\]</span></p>
 </div>
-<div id="cr-logarithm-then" class="scale-to-fill sticky">
-<p>Then… <span class="math display">\[\log_b(y) = x\]</span></p>
+<div id="cr-logarithm-then" class="sticky">
+<p>Then… <span class="math display">\[\log_{\color{blue}{b}}{\color{purple}{y}} \color{black}{=} \color{red}{x}\]</span></p>
 </div>
-<div id="cr-logarithm-words" class="scale-to-fill sticky">
-<p>If <span class="math inline">\(\text{number} = \text{base}^{\text{exponent}}\)</span></p>
+<div id="cr-logarithm-words" class="sticky">
+<p>If <span class="math inline">\(\color{purple}{\text{number}} = \color{blue}{\text{base}}^{\color{red}{\text{exponent}}}\)</span></p>
 <p>then</p>
-<p><span class="math inline">\(\log_{\text{base}}(\text{number}) = \text{exponent}\)</span>.</p>
+<p><span class="math inline">\(\log_{\color{blue}{\text{base}}}{\color{purple}{\text{number}}} = \color{red}{\text{exponent}}\)</span></p>
 </div>
-<div id="cr-logarithm-example" class="scale-to-fill sticky">
-<p><span class="math inline">\(2^3 = 8\)</span></p>
+<div id="cr-logarithm-example" class="sticky">
+<p><span class="math inline">\(\color{blue}{2}^{\color{red}{3}} = \color{purple}{8}\)</span></p>
 <p>therefore</p>
-<p><span class="math inline">\(log_2 8 = 3\)</span></p>
+<p><span class="math inline">\(log_{\color{blue}{2}} \color{purple}{8} = \color{red}{3}\)</span></p>
 </div>
 <div id="cr-logarithm-question" class="scale-to-fill sticky">
 <div class="callout callout-style-default callout-tip callout-titled">
@@ -299,23 +280,56 @@ Key Idea
 </div>
 </div>
 </div>
-<div id="cr-solve-for-y" class="scale-to-fill sticky">
-<p><span class="math display">\[p(\text{outcome}) = \frac{e^x}{1 + e^x}\]</span></p>
+<div id="cr-e-definition" class="scale-to-fill sticky">
+<div class="callout callout-style-default callout-tip callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+e
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><span class="math inline">\(e\)</span> is a kind of fundamental mathematical constant, like <span class="math inline">\(\pi\)</span>.</p>
+</div>
+</div>
+</div>
+<div id="cr-ln-definition-if" class="sticky">
+<p>If</p>
+<p><span class="math display">\[\color{purple}{y} = \color{blue}{e}^{\color{red}{x}}\]</span></p>
+</div>
+<div id="cr-ln-definition-then" class="sticky">
+<p>Then</p>
+<p><span class="math display">\[\ln{\color{purple}{y}} = \color{red}{x}\]</span></p>
+</div>
+<div id="cr-odds" class="sticky">
+<p><span class="math display">\[\frac{p(\text{outcome})}{1-p(\text{outcome})}\]</span></p>
+</div>
+<div id="cr-log-odds" class="sticky">
+<p><span class="math display">\[\ln(\frac{p(\text{outcome})}{1-p(\text{outcome})}) = \beta x\]</span></p>
+</div>
+<div id="cr-solve-for-y" class="sticky">
+<p><span class="math display">\[p(\text{outcome}) = \frac{e^{\beta x}}{1 + e^{\beta x}}\]</span></p>
 </div>
 <div id="cr-sigmoid" class="scale-to-fill sticky">
-<div class="quarto-figure quarto-figure-center">
+<div class="cell">
+<div class="cell-output-display">
+<div>
 <figure class="figure">
-<p><img src="logistic.png" class="img-fluid figure-img" style="width:50.0%"></p>
-<figcaption>Logistic Function</figcaption>
+<p><img src="logarithms_files/figure-html/unnamed-chunk-2-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
+</div>
+</div>
 </div>
 </div>
 <div id="cr-logarithmic-spiral" class="scale-to-fill sticky">
-<div class="quarto-figure quarto-figure-center">
-<figure class="figure">
-<p><img src="desmos-graph.png" class="img-fluid figure-img" style="width:30.0%"></p>
-<figcaption>Desmos Graph of Logarithmic Spiral</figcaption>
-</figure>
+<div class="quarto-layout-panel" data-layout-ncol="1">
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell" style="flex-basis: 100.0%;justify-content: center;">
+<p><img src="desmos-graph.png" class="img-fluid"></p>
+</div>
+</div>
 </div>
 </div>
 <div id="cr-logarithmic-spiral-2" class="scale-to-fill sticky">
@@ -361,7 +375,10 @@ Livio, Mario. 2002. <em>The Golden Ratio: The Story of Phi, the World’s Most A
 </div></section><section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes"><h2 class="anchored quarto-appendix-heading">Footnotes</h2>
 
 <ol>
-<li id="fn1"><p>A common definition of <span class="math inline">\(e\)</span> is <span class="math display">\[e = \lim_{n \to \infty} \left(1 + \frac{1}{n} \right)^n\]</span><a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1"><span class="math inline">\(e\)</span> does not have the easy geometric definition that <span class="math inline">\(\pi\)</span> has.
+<p>
+</p><p>For any <span class="math inline">\(\bigcirc\)</span>, <span class="math display">\[\pi = \frac{\text{circumference}}{\text{diameter}}\]</span>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn2"><p>A common definition of <span class="math inline">\(e\)</span> is <span class="math display">\[e = \lim_{n \to \infty} \left(1 + \frac{1}{n} \right)^n\]</span><a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section></div></main>
 <!-- /main column -->
