--- a/logarithms/logarithms.html
+++ b/logarithms/logarithms.html
@@ -104,10 +104,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
+          --cr-narrative-background-color-sidebar: white;
+--cr-section-background-color: white;
 --cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
---cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -146,34 +146,34 @@ window.Quarto = {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-focus-on="cr-exponential" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-exponential">
 <section id="the-exponential-function" class="level2 narrative">
 <h2 class="anchored" data-anchor-id="the-exponential-function">The Exponential Function</h2>
 <p>We start with the <em>exponential function</em>.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-exponential-definition" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-exponential-definition">
 <div class="narrative">
 <p>The <em>exponent</em> tells us how many times to multiply the base by itself to get the result.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-logarithm-if" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-logarithm-if">
 <section id="the-logarithm" class="level2 narrative">
 <h2 class="anchored" data-anchor-id="the-logarithm">The Logarithm</h2>
 <p>We then consider the <em>logarithm</em>.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-logarithm-then" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-logarithm-then">
 <div class="narrative">
 
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-logarithm-words" data-scale-by="3.0">
+<div class="trigger new-trigger" data-scale-by="3.0" data-focus-on="cr-logarithm-words">
 <div class="narrative">
 <p>In words:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-logarithm-example" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-logarithm-example">
 <div class="narrative">
 <p>For example:</p>
 </div>
@@ -194,28 +194,28 @@ window.Quarto = {
 <p><span class="math inline">\(e\)</span> emerges in many contexts, including some aspects of compound growth processes<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>. <span class="math inline">\(e\)</span> is approximately equal to 2.71828….</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-ln-definition-if" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-ln-definition-if">
 <div class="narrative">
 
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-ln-definition-then" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-ln-definition-then">
 <div class="narrative">
 
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-odds" data-scale-by="5.0">
+<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-odds">
 <section id="logistic-regression" class="level2 narrative">
 <h2 class="anchored" data-anchor-id="logistic-regression">Logistic Regression</h2>
 <p>One application of the logarithm is in thinking about <em>logistic regression</em>. In logistic regression, we start by thinking about the <em>odds</em> of our outcome:</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-log-odds" data-scale-by="3.0">
+<div class="trigger new-trigger" data-scale-by="3.0" data-focus-on="cr-log-odds">
 <div class="narrative">
 <p>For mathematical reasons–illustrated below–we end up working with the <em>logarithm</em> of the odds, or the <em>log odds</em>:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-solve-for-y" data-scale-by="3.0">
+<div class="trigger new-trigger" data-scale-by="3.0" data-focus-on="cr-solve-for-y">
 <div class="narrative">
 <p>To <em>graph</em> or <em>visualize</em> these <em>log odds</em>, we need to solve for <span class="math inline">\(p(\text{outcome})\)</span>, the probability of the outcome:</p>
 </div>
