--- a/logarithms/logarithms.html
+++ b/logarithms/logarithms.html
@@ -104,10 +104,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: white;
+          --cr-narrative-text-color-sidebar: black;
 --cr-section-background-color: white;
 --cr-narrative-background-color-overlay: grey;
---cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -146,34 +146,34 @@ window.Quarto = {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-exponential">
+<div class="trigger new-trigger" data-focus-on="cr-exponential">
 <section id="the-exponential-function" class="level2 narrative">
 <h2 class="anchored" data-anchor-id="the-exponential-function">The Exponential Function</h2>
 <p>We start with the <em>exponential function</em>.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-exponential-definition">
+<div class="trigger new-trigger" data-focus-on="cr-exponential-definition">
 <div class="narrative">
 <p>The <em>exponent</em> tells us how many times to multiply the base by itself to get the result.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-logarithm-if">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-if">
 <section id="the-logarithm" class="level2 narrative">
 <h2 class="anchored" data-anchor-id="the-logarithm">The Logarithm</h2>
 <p>We then consider the <em>logarithm</em>.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-logarithm-then">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-then">
 <div class="narrative">
 
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="3.0" data-focus-on="cr-logarithm-words">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-words">
 <div class="narrative">
 <p>In words:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-logarithm-example">
+<div class="trigger new-trigger" data-focus-on="cr-logarithm-example">
 <div class="narrative">
 <p>For example:</p>
 </div>
@@ -194,28 +194,28 @@ window.Quarto = {
 <p><span class="math inline">\(e\)</span> emerges in many contexts, including some aspects of compound growth processes<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a>. <span class="math inline">\(e\)</span> is approximately equal to 2.71828….</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-ln-definition-if">
+<div class="trigger new-trigger" data-focus-on="cr-ln-definition-if">
 <div class="narrative">
 
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-ln-definition-then">
+<div class="trigger new-trigger" data-focus-on="cr-ln-definition-then">
 <div class="narrative">
 
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="5.0" data-focus-on="cr-odds">
+<div class="trigger new-trigger" data-focus-on="cr-odds">
 <section id="logistic-regression" class="level2 narrative">
 <h2 class="anchored" data-anchor-id="logistic-regression">Logistic Regression</h2>
 <p>One application of the logarithm is in thinking about <em>logistic regression</em>. In logistic regression, we start by thinking about the <em>odds</em> of our outcome:</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-scale-by="3.0" data-focus-on="cr-log-odds">
+<div class="trigger new-trigger" data-focus-on="cr-log-odds">
 <div class="narrative">
 <p>For mathematical reasons–illustrated below–we end up working with the <em>logarithm</em> of the odds, or the <em>log odds</em>:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="3.0" data-focus-on="cr-solve-for-y">
+<div class="trigger new-trigger" data-focus-on="cr-solve-for-y">
 <div class="narrative">
 <p>To <em>graph</em> or <em>visualize</em> these <em>log odds</em>, we need to solve for <span class="math inline">\(p(\text{outcome})\)</span>, the probability of the outcome:</p>
 </div>
@@ -240,27 +240,27 @@ window.Quarto = {
 </div>
 <div class="sticky-col">
 <div class="sticky-col-stack">
-<div id="cr-exponential" class="sticky">
+<div id="cr-exponential" class="scale-to-fill sticky">
 <p><span class="math display">\[\color{purple}{y} \color{black}{=} \color{blue}{\text{base}}^{\color{red}{\text{exponent}}}\]</span></p>
 </div>
-<div id="cr-exponential-definition" class="sticky">
+<div id="cr-exponential-definition" class="scale-to-fill sticky">
 <p><span class="math inline">\(\color{blue}{2}^{\color{red}{3}} \color{black}{=} \color{purple}8\)</span></p>
 <p>because</p>
 <p><span class="math inline">\(\color{blue}{2} \times \color{blue}{2} \times \color{blue}{2} \color{black}{=} \color{purple}{8}\)</span></p>
 </div>
-<div id="cr-logarithm-if" class="sticky">
+<div id="cr-logarithm-if" class="scale-to-fill sticky">
 <p>If…</p>
 <p><span class="math display">\[\color{purple}{y} \color{black}{=} \color{blue}{b}^{\color{red}{x}}\]</span></p>
 </div>
-<div id="cr-logarithm-then" class="sticky">
+<div id="cr-logarithm-then" class="scale-to-fill sticky">
 <p>Then… <span class="math display">\[\log_{\color{blue}{b}}{\color{purple}{y}} \color{black}{=} \color{red}{x}\]</span></p>
 </div>
-<div id="cr-logarithm-words" class="sticky">
+<div id="cr-logarithm-words" class="scale-to-fill sticky">
 <p>If <span class="math inline">\(\color{purple}{\text{number}} = \color{blue}{\text{base}}^{\color{red}{\text{exponent}}}\)</span></p>
 <p>then</p>
 <p><span class="math inline">\(\log_{\color{blue}{\text{base}}}{\color{purple}{\text{number}}} = \color{red}{\text{exponent}}\)</span></p>
 </div>
-<div id="cr-logarithm-example" class="sticky">
+<div id="cr-logarithm-example" class="scale-to-fill sticky">
 <p><span class="math inline">\(\color{blue}{2}^{\color{red}{3}} = \color{purple}{8}\)</span></p>
 <p>therefore</p>
 <p><span class="math inline">\(log_{\color{blue}{2}} \color{purple}{8} = \color{red}{3}\)</span></p>
@@ -295,21 +295,21 @@ e
 </div>
 </div>
 </div>
-<div id="cr-ln-definition-if" class="sticky">
+<div id="cr-ln-definition-if" class="scale-to-fill sticky">
 <p>If</p>
 <p><span class="math display">\[\color{purple}{y} = \color{blue}{e}^{\color{red}{x}}\]</span></p>
 </div>
-<div id="cr-ln-definition-then" class="sticky">
+<div id="cr-ln-definition-then" class="scale-to-fill sticky">
 <p>Then</p>
 <p><span class="math display">\[\ln{\color{purple}{y}} = \color{red}{x}\]</span></p>
 </div>
-<div id="cr-odds" class="sticky">
+<div id="cr-odds" class="scale-to-fill sticky">
 <p><span class="math display">\[\frac{p(\text{outcome})}{1-p(\text{outcome})}\]</span></p>
 </div>
-<div id="cr-log-odds" class="sticky">
+<div id="cr-log-odds" class="scale-to-fill sticky">
 <p><span class="math display">\[\ln(\frac{p(\text{outcome})}{1-p(\text{outcome})}) = \beta x\]</span></p>
 </div>
-<div id="cr-solve-for-y" class="sticky">
+<div id="cr-solve-for-y" class="scale-to-fill sticky">
 <p><span class="math display">\[p(\text{outcome}) = \frac{e^{\beta x}}{1 + e^{\beta x}}\]</span></p>
 </div>
 <div id="cr-sigmoid" class="scale-to-fill sticky">
