--- a/logarithms/logarithms.html
+++ b/logarithms/logarithms.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-10-23">
+<meta name="dcterms.date" content="2025-10-24">
 
 <title>Logarithms</title>
 <style>
@@ -104,10 +104,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-sidebar: black;
+          --cr-narrative-background-color-overlay: grey;
 --cr-section-background-color: white;
---cr-narrative-background-color-overlay: grey;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -132,7 +132,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 23, 2025</p>
+      <p class="date">October 24, 2025</p>
     </div>
   </div>
   
@@ -165,7 +165,7 @@ window.Quarto = {
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-logarithm-then">
 <div class="narrative">
-
+<p><span class="emoji" data-emoji="arrow_down">⬇️</span></p>
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-logarithm-words">
@@ -196,12 +196,12 @@ window.Quarto = {
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-ln-definition-if">
 <div class="narrative">
-
+<p><span class="emoji" data-emoji="arrow_down">⬇️</span></p>
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-ln-definition-then">
 <div class="narrative">
-
+<p><span class="emoji" data-emoji="arrow_down">⬇️</span></p>
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-odds">
